# BITCOIN4Traders

./: .env.example  .gitignore  BITCOIN4Traders_Colab.ipynb  CLAUDE.md  COMPLETE_OVERVIEW.md  CONTRIBUTING.md  CRITICAL_ANALYSIS.md  Colab_1_Daten.ipynb  Colab_2_Evolution.ipynb  Colab_3_PPO_Training.ipynb  ENHANCEMENT_SUMMARY.md  LICENSE  Makefile  PROGRESS_SUMMARY.md  PROGRESS_TRACKER.md  README.md  SOTA_SYSTEM_SUMMARY.md  SUPERHUMAN_2040_SUMMARY.md  SURVEILLANCE_PROTECTION_SUMMARY.md  TEST_REPORT_VALIDATED.md  TEST_STATUS.md  ULTRA_INSTITUTIONAL_SUMMARY.md  auto_12h_train.py  auto_train.py  darwin_engine.py  docker-compose.yml  download_comprehensive_data.py  download_historical_data.py  ecosystem.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  risk_engine.py  run.py  setup.py  setup_local_master.sh  sync_champion.sh  train.py  train_curriculum.py  train_largenet.py  (+4 more)
PostgreSQL/: install_postgres.sh  readme
backend/: docker-compose.yml  main.py  requirements.txt
config/: memory_management.yaml  phase7.yaml  strategy_evolution.yaml  stress_test.yaml
docs/: ANTIBIAS_INTEGRATION.md  ARCHITECTURE.md  BACKTESTING_GUIDE.md  CRYPTO_FUTURES_ENV.md  DATA_PIPELINE.md  DATA_SOURCES_ASSESSMENT.md  DEVELOPER_GUIDE.md  DRL_ALGORITHMS_COMPLETE.md  FINRL_COMPARISON.md  FRONTEND_SPEC.md  INFRASTRUCTURE.md  MATHEMATICAL_MODELS_GUIDE.md  MODULES_REFERENCE.md  PHASE1_REPORT.txt  PHASE2_REPORT.txt  PHASE3_FUNCTION_SUMMARY.txt  PHASE3_REPORT.txt  PHASE4_REPORT.txt  PHASE5_REPORT.txt  PHASE6_REPORT.txt  PROJECT_STRUCTURE.md  RISK_MANAGEMENT.md  TRAINING_EXPERIMENTS.md  (+3 more)
(+154 files in other folders)
